--- a/p_stats/templates/new_entry.html
+++ b/p_stats/templates/new_entry.html
@@ -1,17 +1,18 @@
+<!-- This Template is for displaying form for registering patient and its details -->
 
 <form data-abide id="edit_form" method="POST" action="">    
 	{% csrf_token %}
   	<div class="row">
 	    <div class="large-4 columns">
 	      <label>First Name <b style="color:red;">*</b> 
-	        <input type="text" name="f_name" required pattern="[a-zA-Z]+" placeholder="Patient first name" />
+	        <input type="text" name="f_name" required pattern="[a-zA-Z]+" value="{{patient.f_name}}" placeholder="Patient first name" />
 	      </label>
 	      <small class="error">First Name is required and must be a string.</small>
 	    </div>
 
 	    <div class="large-4 columns">
 	      <label>Last Name <b style="color:red;">*</b> 
-	        <input type="text" name="l_name" required pattern="[a-zA-Z]+" placeholder="Patient second name" />
+	        <input type="text" name="l_name" required pattern="[a-zA-Z]+" value="{{patient.l_name}}" placeholder="Patient second name" />
 	      </label>
 	      <small class="error">Last Name is required and must be a string.</small>
 	    </div>
@@ -19,7 +20,7 @@
 	    <div class="large-4 columns">
 	      <label>City <b style="color:red;">*</b> 
 	        <select name="city" required="">
-	          <option></option>
+	          <option>{{patient.city}}</option>
 	          <option>Mumbai</option>
 	          <option>Delhi</option>
 	          <option>Gujrath</option>
@@ -34,21 +35,21 @@
    	<div class="row">
     	<div class="large-3 columns">
 	      <label>Age <b style="color:red;">*</b>
-	        <input type="text" name="age" required pattern="[0-9]{2}" placeholder="Patient Age Eg: 23" />
+	        <input type="text" name="age" required pattern="[0-9]{2}" value="{{patient.age}}" placeholder="Patient Age Eg: 23" />
 	      </label>
 	      <small class="error">Enter valid age.</small>        
 	    </div>	    
 
 	    <div class="large-4 columns">
 	      <label>Phone <b style="color:red;">*</b>
-	        <input type="tel" name="phone" required pattern="[0-9]{10}" placeholder="Enter10 digit mb number" required />
+	        <input type="tel" name="phone" required pattern="[0-9]{10}" value="{{patient.phone}}" placeholder="Enter10 digit mb number" required />
 	      </label>	    
 	      <small class="error">Enter valid phone number.</small>        
 	    </div>
 
 	    <div class="large-5 columns">
 	      <label>Email	
-	      	<input type="email" name="email" placeholder="abc@kbc.com" />
+	      	<input type="email" name="email" value="{{patient.email}}" placeholder="abc@kbc.com" />
 	      </label>	
 	      <small class="error">Enter valid email address.</small>      
 	    </div>
@@ -57,14 +58,14 @@
    	<div class="row">
    		<div class="large-6 columns">
    		  <label>Address 1 <b style="color:red;">*</b>
-	        <textarea name="addr1" required pattern="[a-zA-Z0-9]+" placeholder="Patient Address 1"></textarea>
+	        <input type="text" name="addr1" required pattern="[a-zA-Z0-9]+" value="{{patient.address1}}" />
 	      </label>
 	      <small class="error">Enter valid address.</small>      
    		</div>
 
    		<div class="large-6 columns">
    		  <label>Address 2
-	        <textarea name="addr2" placeholder="Patient Address 2"></textarea>
+	        <input type="text" name="addr2" value="{{patient.address2}}" placeholder="Patient Address 2" />
 	      </label>	      
    		</div>
    	</div>
@@ -73,7 +74,7 @@
 	    <div class="large-4 columns">
 	      <label>Doctor <b style="color:red;">*</b>
 	        <select name="dr_name" required="">
-	          <option></option>
+	          <option>{{patient.dr_name}}</option>
 	          <option>Dr. Kapil</option>
 	          <option>Dr. Somanath</option>
 	          <option>Dr. Suresh</option>
@@ -86,13 +87,13 @@
 
 	    <div class="large-4 columns">
 	      <label>Disease
-	        <textarea name="disease" placeholder="Patient Disease"></textarea>
+	        <input type="text" name="disease" value="{{patient.disease}}" placeholder="Patient Disease" />
 	      </label>
 	    </div>
 
 	    <div class="large-4 columns">
 	      <label>Prescription
-	        <textarea name="prescription" placeholder="Doctors Prescription"></textarea>
+	        <input type="text" name="prescription" value="{{patient.prescription}}" placeholder="Doctors Prescription" />
 	      </label>
 	    </div>
   	</div>
